fix: add secretRef

--- a/k8s.yaml
+++ b/k8s.yaml
@@ -29,3 +29,6 @@ spec:
           requests:
             cpu: "0.2"
             memory: 128Mi
+        envFrom:
+          - secretRef:
+              name: hami0825
